--- a/QLKhachSan/Views/Room/Booking.cshtml
+++ b/QLKhachSan/Views/Room/Booking.cshtml
@@ -50,7 +50,7 @@
                 </ul>
                 <hr class="mt-2">
                 <ul class="sidebar__payment-total">
-                    <li class="h4 fw-bold f-primary mb-0">Tổng tiền: @ViewBag.TotalAmount €</li>
+                    <li class="h4 fw-bold f-primary mb-0">Tổng tiền: @ViewBag.TotalAmount VND</li>
                 </ul>
             </section>
             <section class="sidebar__card card">
